# robopi

./: CMakeLists.txt  package.xml
config/: cam_intrinsics.yaml  controllers.yaml  costmap_common.yaml  costmap_global.yaml  costmap_local.yaml  local_planner.yaml  map.yaml  move_base.yaml  rviz.rviz
launch/: 01-diff_drive.launch  gazebo.launch  map.launch  move_base.launch  robopi.launch  robopi_sim.launch  view_demo.launch  vision.launch
script/: plot_encoder.py  plot_pid.py  plot_velocity_estimate.py  velocity_estimation.py
src/: depth_cloud_filter_node.cpp
src/hal/pi-ln298n/: CMakeLists.txt
src/hal/pi-ln298n/include/pi_ln298n/: pi_ln298n.h
src/hal/pi-ln298n/src/: GpioMotor.cpp  GpioMotor.h  pigpiostub.cpp  pigpiostub.h
src/hal/pi-ln298n/test/: test.cpp
urdf/: 01-diff_drive.urdf  02-diff_drive.urdf.xacro  camera.urdf.xacro  chassis.urdf.xacro  globals.urdf.xacro  robopi.urdf.xacro  sonar.urdf.xacro  wheels.urdf.xacro
urdf/sim/: robopi_sim.urdf.xacro
